# DataEngineer_Training

day1/: conversion.py
day2/: challenge.py  decorators.py  engineering_employees.csv  problem.py  sample.ipynb
day2/test-cases/: sample.py
day3/: joinsProblem.sql
day4/: challenge1.sql  challenge2.sql  practice.sql  tasks.sql
day5/: activity.csv  data.csv  task2.py  task3.py  task5.py  task7.py
day6/: DeltaLake.py  challenge.py  data.csv  employees.json  regions.csv
day6/delta_table/: .part-00000-1e16605d-efd9-4b08-bc59-9211aa511906-c000.snappy.parquet.crc  part-00000-1e16605d-efd9-4b08-bc59-9211aa511906-c000.snappy.parquet  part-00000-9bfdfcd6-a503-445a-8d12-f17a052211c4-c000.snappy.parquet
day6/files/: CV103.txt
week1/day1/: readparquet.py  sample.py
week1/day2/: comprehensions.py  employees.csv
week1/day3/: challenge1.sql  challenge2.sql  queriesPractice.sql  workingOnLargeData.sql
week1/day4/: HomePractice.sql  procedures.sql  sampledata.sql  triggers.sql
week1/day5/: clicks.csv  orders.csv  practice.py  products.csv  sparkBasics.py  task1.py  task2.py  task5.py  task7.py  transactions.csv  users.csv
week1/week1_casestudy/: queries.sql  schema.sql
week1_casestudy/caseone/: .coverage  output.parquet  parking_events.csv  pyproject.toml  spark_job.py
week1_casestudy/caseone/src/caseone/: cli_tool.py  main.py
week1_casestudy/caseone/tests/: cli_test.py
week1_casestudy/caseone/zone_totals.parquet/: part-00000-4578bb29-0bb6-4fcd-a7b1-2c0af097ec71-c000.snappy.parquet
week2/day10/: casestudy.sql  casestudy_diagram.mwb  customers.csv  (+4 more)
(+472 files in other folders)
