[project]
name = "caseone"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "coverage (>=7.9.2,<8.0.0)"
]

[tool.poetry]
packages = [{include = "caseone", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
coverage = "^7.9.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
caseone="caseone.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]